--- a/assets/style.css
+++ b/assets/style.css
@@ -8,5 +8,10 @@ body {
   position: fixed;
   height: 100%;
   width: 100%;
+  display: flex;
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
 }
+
